<resources>
    <string name="app_name">" Communicating via the Internet"</string>
    <string name="get_xml">Get XML from URL</string>
    <string name="get_json">Get JSON from URL</string>
    <string name="get_image">Get Image from URL</string>
    <string name="notice">Weather In Hanoi now</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="location">Location</string>
    <string name="country">Country:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="weather">Weather</string>
</resources>
